test/bad/stmt_double_bind2.pa
def foo for a b {
    foo(a,b) <-> forall b, a = c
}

